tests/ui/fail/fn-mismatch-async-01.rs
fn main() {}

#[union_fn::union_fn]
trait Foo {
    fn foo() {}
    async fn bar() {}
}
