tests/ui/fail/fn-mismatch-async-01.stderr
error: encountered mismatch in asyncness for #[union_fn] method
 --> tests/ui/fail/fn-mismatch-async-01.rs:6:5
  |
6 |     async fn bar() {}
  |     ^^^^^

error: mismatch with this method
 --> tests/ui/fail/fn-mismatch-async-01.rs:5:5
  |
5 |     fn foo() {}
  |     ^^
